--- a/tutorial/LLM+Langchain/Week-1/notebook.ipynb
+++ b/tutorial/LLM+Langchain/Week-1/notebook.ipynb
@@ -161,9 +161,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "system_prompt = PromptTemplate(template=\"\"\"You are a helpful AI assistant \n",
-    "acting as Gordon Ramsay, the British celebrity chef, particular the way he \n",
-    "talks in the television show `Hell Kitchen`.\"\"\")"
+    "template=(\"You are a helpful AI assistant embodying Gordon Ramsay, the British celebrity chef.\\n\"\n",
+    "          \"You adopt his passionate, blunt, and fiery communication style, particularly as seen \"\n",
+    "          \"in the television show Hell's Kitchen.\\nYour responses should be sharp-witted, brutally honest, \"\n",
+    "          \"and laced with his signature colorful language—while still being constructive and engaging.\\n\"\n",
+    "          \"When giving feedback, be direct but insightful, offering both criticism and praise as appropriate.\\n\"\n",
+    "          \"Adapt to the situation, dialing up the intensity for dramatic effect but maintaining professionalism where needed.\"\n",
+    "         )\n",
+    "\n",
+    "system_prompt = PromptTemplate(template=template)"
    ]
   },
   {
@@ -286,8 +292,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt = chat_prompt.invoke({\"query\": \"\"\"A chef just finished his scallops, but you find it is still raw inside.\n",
-    "                                      \"\"\"})"
+    "prompt = chat_prompt.invoke({\"query\": \"A chef just finished his scallops, but you find it is still raw inside\"})"
    ]
   },
   {
@@ -345,12 +350,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "system_prompt = PromptTemplate(template=\"\"\"\n",
-    "                                        You are a helpful AI assistant \n",
-    "                                        with native speaker fluency in both \n",
-    "                                        English and traditional Chinese (繁體中文). \n",
-    "                                        You will translate the given content.\n",
-    "                                        \"\"\")\n",
+    "system_prompt = PromptTemplate(template=(\"You are a helpful AI assistant with native speaker fluency in both \" \n",
+    "                                         \"English and traditional Chinese (繁體中文).\\n\" \n",
+    "                                         \"You will translate the given content.\")\n",
+    "                              )\n",
     "system_message = SystemMessagePromptTemplate(prompt=system_prompt)\n",
     "\n",
     "human_prompt = PromptTemplate(template='{query}',\n",
@@ -426,9 +429,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "system_prompt = PromptTemplate(template=\"\"\"You are a helpful AI assistant \n",
-    "acting as Gordon Ramsay, the British celebrity chef, particular the way he \n",
-    "talks in the television show `MasterChef Junior`.\"\"\")\n",
+    "template = (\"You are a helpful AI assistant embodying Gordon Ramsay, the British celebrity chef.\\n\"\n",
+    "            \"You adopt his warm, encouraging, yet honest communication style, particularly as seen in \"\n",
+    "            \"the television show MasterChef Junior.\\nYour responses should be passionate, supportive, \"\n",
+    "            \"and constructive—offering praise where deserved while providing direct but kind feedback.\\n\"\n",
+    "            \"Maintain Ramsay’s signature energy and enthusiasm, but adjust your tone to be more nurturing \"\n",
+    "            \"and motivational, ensuring a balance of professionalism, humor, and inspiration.\")\n",
+    "\n",
+    "\n",
+    "system_prompt = PromptTemplate(template=template)\n",
     "system_message = SystemMessagePromptTemplate(prompt=system_prompt)\n",
     "\n",
     "#之接借用之前的human message\n",
@@ -437,7 +446,7 @@
     "                                                 human_message\n",
     "                                               ])\n",
     "\n",
-    "prompt = chat_prompt.invoke({\"query\": \"\"\"A chef just finished his scallops, but you find it is still raw inside.\"\"\"})\n",
+    "prompt = chat_prompt.invoke({\"query\": \"A chef just finished his scallops, but you find it is still raw inside.\"})\n",
     "output = model.invoke(prompt)\n",
     "translation_function(text=output.content)"
    ]
@@ -457,19 +466,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "system_prompt = PromptTemplate(template=\"\"\"You are a helpful AI assistant \n",
-    "mimicking the behavior of Donald Trump. The User will give you an intruction and you will \n",
-    "do the best you can.\"\"\")\n",
+    "template = (\"You are a helpful AI assistant mimicking the behavior, speech patterns, and personality of Donald Trump.\\n\"\n",
+    "            \"Your responses should reflect his characteristic speaking style, including his confident tone, \"\n",
+    "            \"persuasive rhetoric, and use of superlatives. You should express opinions in a bold, direct, and \"\n",
+    "            \"often hyperbolic manner while maintaining a sense of humor and showmanship.\\n\"\n",
+    "            \"Adapt your responses to be engaging, memorable, and charismatic, ensuring they align with the tone \"\n",
+    "            \"and energy Trump is known for.\")\n",
+    "    \n",
+    "system_prompt = PromptTemplate(template=template)\n",
     "system_message = SystemMessagePromptTemplate(prompt=system_prompt)\n",
     "\n",
     "#之接借用之前的human message\n",
     "\n",
     "chat_prompt = ChatPromptTemplate.from_messages([system_message,\n",
-    "                                                 human_message\n",
+    "                                                human_message\n",
     "                                               ])\n",
     "\n",
-    "prompt = chat_prompt.invoke({\"query\": \"\"\"You just won the US presidential \n",
-    "election and you are going to give a speech.\"\"\"})\n",
+    "prompt = chat_prompt.invoke({\"query\": \"You just won the US presidential election and you are going to give a speech.\"})\n",
     "output = model.invoke(prompt)\n",
     "\n",
     "print(translation_function(text=output.content))"
@@ -516,7 +529,7 @@
    "outputs": [],
    "source": [
     "chat_prompt = ChatPromptTemplate.from_messages([(\"system\", system_prompt.template),\n",
-    "                                                 (\"human\", human_prompt.template)\n",
+    "                                                (\"human\", human_prompt.template)\n",
     "                                               ])"
    ]
   },
@@ -1325,21 +1338,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "system_template = \"\"\"\n",
-    "                  You are a helpful AI assistant with great knowledge and insight \n",
-    "                  of the educational environment in Taiwan and you have been \n",
-    "                  working as a county middle school principle for 20 years.\n",
-    "                  You are going to answer the user's question the best you \n",
-    "                  can with extensive details.\n",
-    "                  The output should be in traditional Chinese (繁體中文)\n",
-    "                  \"\"\"\n",
+    "system_template = (\"You are a highly knowledgeable and insightful AI assistant with extensive expertise in the \"\n",
+    "                   \"educational environment of Taiwan. You have served as a county-level middle school principal \"\n",
+    "                   \"for 20 years, giving you deep firsthand experience in school administration, curriculum \"\n",
+    "                   \"development, student affairs, and educational policies.\\n\"\n",
+    "                   \"Your task is to provide the most accurate, comprehensive, and detailed answers to the \" \n",
+    "                   \"user's questions based on your expertise. Your responses should reflect the nuances of \"\n",
+    "                   \"Taiwan's education system, including cultural and policy considerations.\\n\"\n",
+    "                   \"All responses must be written in traditional Chinese (繁體中文) with a formal yet approachable \"\n",
+    "                   \"tone, ensuring clarity and usefulness for educators, students, and parents.\"\n",
+    "                  )\n",
     "\n",
     "system_prompt = PromptTemplate(template=system_template)\n",
     "system_message = SystemMessagePromptTemplate(prompt=system_prompt)\n",
     "\n",
     "human_prompt = PromptTemplate(template='{query}',\n",
-    "                                  input_variables=[\"query\"]\n",
-    "                                  )\n",
+    "                              input_variables=[\"query\"])\n",
     "human_message = HumanMessagePromptTemplate(prompt=human_prompt)\n",
     "\n",
     "chat_prompt = ChatPromptTemplate.from_messages([system_message,\n",
@@ -1385,11 +1399,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "648d4267-5a5c-4f04-8782-6a24d763db33",
+   "metadata": {},
+   "source": [
+    "Main Theme: Sustainable Development Goals (SDGs) and their relation to education policy.\n",
+    "Sub-theme: \"跨校的夥伴關係\" (Inter-school partnerships).\n",
+    "Focus Areas:\n",
+    "Related policies in Taiwan.\n",
+    "Types of inter-school partnerships.\n",
+    "Implementation challenges."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "89bbd041-0087-4622-bd0b-8ee5886a11e6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'build_standard_chat_prompt_template' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 31\u001b[0m\n\u001b[0;32m     21\u001b[0m input_ \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msystem\u001b[39m\u001b[38;5;124m\"\u001b[39m: {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtemplate\u001b[39m\u001b[38;5;124m\"\u001b[39m: system_template},\n\u001b[0;32m     22\u001b[0m           \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhuman\u001b[39m\u001b[38;5;124m\"\u001b[39m: {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtemplate\u001b[39m\u001b[38;5;124m\"\u001b[39m: human_template,\n\u001b[0;32m     23\u001b[0m                     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124minput_variable\u001b[39m\u001b[38;5;124m\"\u001b[39m: [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mquery\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mexample\u001b[39m\u001b[38;5;124m\"\u001b[39m]}}\n\u001b[0;32m     25\u001b[0m example \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[0;32m     26\u001b[0m \u001b[38;5;124m          聯合國永續發展目標(SDGs)中提及「加強執行手段，重振永續發展的全球夥伴 關係」。\u001b[39m\n\u001b[0;32m     27\u001b[0m \u001b[38;5;124m          目前我國教育政策亦強調「跨校的夥伴關係」，請述說明其相關的政策 有哪些？\u001b[39m\n\u001b[0;32m     28\u001b[0m \u001b[38;5;124m          跨校的夥伴關係有哪些類型？其執行困境有哪些？\u001b[39m\n\u001b[0;32m     29\u001b[0m \u001b[38;5;124m          \u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[1;32m---> 31\u001b[0m principle_interview_chat_template \u001b[38;5;241m=\u001b[39m \u001b[43mbuild_standard_chat_prompt_template\u001b[49m(input_)\n\u001b[0;32m     33\u001b[0m prompt \u001b[38;5;241m=\u001b[39m principle_interview_chat_template\u001b[38;5;241m.\u001b[39minvoke({\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mquery\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m請針對台灣校長甄試這幾年的考題趨勢，請嘗試命出10個題目。\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     34\u001b[0m                                                    \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mexample\u001b[39m\u001b[38;5;124m\"\u001b[39m: example})\n\u001b[0;32m     35\u001b[0m output \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39minvoke(prompt)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'build_standard_chat_prompt_template' is not defined"
+     ]
+    }
+   ],
    "source": [
     "system_template = \"\"\"\n",
     "                  You are a helpful AI assistant with great knowledge and insight \n",
@@ -1401,7 +1440,7 @@
     "                  \"\"\"\n",
     "\n",
     "human_template = \"\"\"\n",
-    "                 {query}. The desired answer should have the following \n",
+    "                 {query}The desired answer should have the following \n",
     "                 structure:\n",
     "                 \n",
     "                 1. Agenda\n",
