--- a/tutorial/LLM+Langchain/Week-2/notebook.ipynb
+++ b/tutorial/LLM+Langchain/Week-2/notebook.ipynb
@@ -9,6 +9,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bef0fdeb-a495-4c91-8164-b37dfb3b9734",
+   "metadata": {},
+   "source": [
+    "1. conda create -n aicg python=3.10\n",
+    "2. conda activate aicg\n",
+    "3. pip install -r requirements.txt\n",
+    "\n",
+    "4. conda activate aicg\n",
+    "5. jupyter lab"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0ebfbfab-219f-4ea9-b24a-f7f414cf25ac",
@@ -121,15 +134,13 @@
     "        ResponseSchema(name=\"used ingredients\", \n",
     "                       description=\"The actual ingredients used in cooking\"),\n",
     "        ResponseSchema(name=\"extra ingredients\", \n",
-    "                       description=\"extra ingredients that have to be prepared \"),\n",
+    "                       description=\"extra ingredients that have to be prepared\"),\n",
     "        ResponseSchema(name=\"result\", \n",
     "                       description=\"The dish and cooking recipe in detail\")\n",
     "    ]\n",
-    "\n",
     "output_parser = StructuredOutputParser.from_response_schemas(response_schemas)\n",
     "\n",
     "format_instructions = output_parser.get_format_instructions()\n",
-    "\n",
     "\n",
     "system_template = \"\"\"\n",
     "                  You are an AI assistant as the best chef in the world. \n",
@@ -384,7 +395,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'egg' == 'large egg'"
+    "'egg' == 'eggs'"
    ]
   },
   {
@@ -454,11 +465,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embeddings = HuggingFaceEmbeddings(model_name=\"all-MiniLM-L6-v2\")\n",
+    "# embeddings = HuggingFaceEmbeddings(model_name=\"all-MiniLM-L6-v2\")\n",
     "\n",
     "path = os.path.join(get_project_dir(), 'tutorial', 'LLM+Langchain', 'Week-2', 'BertV2 Index')\n",
     "\n",
-    "vectorstore = FAISS.load_local(path, embeddings, allow_dangerous_deserialization=True)"
+    "vectorstore = FAISS.load_local(path, embedding, allow_dangerous_deserialization=True)"
    ]
   },
   {
@@ -672,6 +683,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d6fa28b-9b5e-4c88-88ce-e5df98033621",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "retriever = vectorstore.as_retriever(search_type='mmr', search_kwargs={'k': 3, 'fetch_k': 50, 'lambda_mult': 0.1})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a612076-ff28-4aed-bae4-0cd3aee30d71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "retriever.invoke(query)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a5160437-1d37-4e08-ac25-7a6f28ed40c8",
    "metadata": {},
@@ -714,7 +745,6 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "\n",
     "\n",
     "filename = os.path.join(get_project_dir(), 'tutorial', 'LLM+Langchain', 'Week-2', 'CNN_Articels_clean.csv')\n",
     "\n",
@@ -817,6 +847,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from langchain.docstore.document import Document\n",
+    "\n",
     "documents = []\n",
     "\n",
     "for idx, row in df_cnn_filtered.iterrows():\n",
@@ -827,7 +859,7 @@
     "                                  \"ID\": f\"{idx}\"})\n",
     "    documents.append(document)\n",
     "\n",
-    "embeddings = HuggingFaceEmbeddings(model_name=\"all-MiniLM-L6-v2\")\n",
+    "embedding = HuggingFaceEmbeddings(model_name=\"all-MiniLM-L6-v2\")\n",
     "cnn_vectorstore = FAISS.from_documents(documents, embedding=embedding)"
    ]
   },
@@ -1347,6 +1379,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "168733ad-8766-4e6c-a83c-1199ca126449",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "e2e_pipeline = {\"query\": composed_chain}|translation_chain|output_parser\n",
+    "e2e_pipeline.invoke({\"topic\": \"ice cream\"})"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ba419208-49a4-48b6-b96a-626963d9e798",
    "metadata": {},
@@ -1666,6 +1709,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59cd5b1d-77bf-4b5f-acd8-cfec2b2a93c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "step_1 = RunnablePassthrough.assign(context=itemgetter('question')|retriever)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8dd81d30-14f3-4c0a-9686-72f1807ce287",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "step_1.invoke({\"question\": \"Is it difficult to fine-tune BERT?\"})"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "9f0c6e19-c233-432f-bc33-82ef3907df4f",
    "metadata": {},
@@ -1717,7 +1780,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "step_1 = RunnablePassthrough.assign(context=itemgetter('question')|retriever)|chatbot_prompt_fn|model|StrOutputParser()"
+    "step_1 = RunnablePassthrough.assign(context=itemgetter('question')|retriever)\n",
+    "\n",
+    "step_2 = step_1|chatbot_prompt_fn|model|StrOutputParser()"
    ]
   },
   {
@@ -1727,7 +1792,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pipeline_ = {\"query\": step_1}|translation_function|model|StrOutputParser()"
+    "pipeline_ = {\"query\": step_2}|translation_function|model|StrOutputParser()"
    ]
   },
   {
@@ -1739,6 +1804,14 @@
    "source": [
     "pipeline_.invoke({\"question\": \"Is it difficult to fine-tune BERT?\"})"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "deab1d31-e250-49d9-9a06-56638b080212",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
