--- a/tutorial/LLM+Langchain/Week-5/Week_5_unstructured.ipynb
+++ b/tutorial/LLM+Langchain/Week-5/Week_5_unstructured.ipynb
@@ -76,6 +76,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "FMIG3PRN7t76"
    },
@@ -83,12 +90,12 @@
    "source": [
     "import os\n",
     "\n",
-    "filename = \"Glycerin.pdf\"\n",
+    "filename = \"Codex - Adeptus Mechanicus.pdf\"\n",
     "\n",
     "elements = partition_pdf(filename,\n",
     "              chunking_strategy='by_title',\n",
     "              infer_table_structure=True,\n",
-    "              extract_image_block_types=['Image', 'Table'],\n",
+    "              extract_image_block_types=['Image'],\n",
     "              max_characters=4000,\n",
     "              new_after_n_chars=3800,\n",
     "              combine_text_under_n_chars=2000,\n",
@@ -177,7 +184,7 @@
    "source": [
     "import configparser\n",
     "\n",
-    "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain_openai import ChatOpenAI\n",
     "\n",
     "\n",
     "def credential_init():\n",
@@ -238,38 +245,6 @@
    "outputs": [],
    "source": [
     "model.invoke(prompt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 237
-    },
-    "id": "F54V_EaBo0rZ",
-    "outputId": "ad0a934d-069d-41e5-f0f9-5a8dffadf7f0"
-   },
-   "outputs": [],
-   "source": [
-    "type(elements[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 250
-    },
-    "id": "nITDej3Vo6nv",
-    "outputId": "d5c4cf2c-3848-44c8-e3f2-431732dce068"
-   },
-   "outputs": [],
-   "source": [
-    "elements[0].text"
    ]
   },
   {
@@ -418,6 +393,13 @@
     "    type_ = 'table'\n",
     "\n",
     "  documents.append(Document(page_content=summary, metadata={'type': type_}))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Can you adapt the process above and use batch to speed?**"
    ]
   },
   {
@@ -598,30 +580,13 @@
     "\n",
     "image_retriever = vectorstore.as_retriever(search_kwargs={\"filter\": {'type': 'image'}})\n",
     "\n",
-    "template = \"\"\"\n",
-    "Answer the question based only on the following context, which can include text, images, and tables:\n",
-    "{context}\n",
-    "Question: {question}\n",
-    "\"\"\"\n",
+    "template = (\"Answer the question based only on the following context, which can include text, images, and tables:\\n\\n\"\n",
+    "            \"{context}\\n\\n\"\n",
+    "            \"Question: {question}\")\n",
     "\n",
     "prompt = ChatPromptTemplate.from_template(template)\n",
     "\n",
     "pipeline_ = RunnablePassthrough.assign(context=itemgetter(\"question\")|image_retriever)| prompt| model| StrOutputParser()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "gQtXAXz12aA-",
-    "outputId": "f41494ae-d757-4713-9e67-0c48029acca0"
-   },
-   "outputs": [],
-   "source": [
-    "print(pipeline_.invoke({\"question\": \"What is the result of the animal test?\"}))"
    ]
   },
   {
@@ -669,6 +634,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import List, Optional\n",
+    "from unstructured.documents.elements import CompositeElement\n",
+    "\n",
+    "\n",
     "def create_trinity_vectorstore(filename: str):\n",
     "    \"\"\"\n",
     "    Create a vectorstore from a pdf file.\n",
@@ -830,6 +799,54 @@
    "outputs": [],
    "source": [
     "vectorstore_1.merge_from(vectorstore_2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Another example with the Bert Thesis**\n",
+    "\n",
+    "You might need a different strategy for a different PDF format."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_trinity_vectorstore(filename: str):\n",
+    "    \"\"\"\n",
+    "    Create a vectorstore from a pdf file.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    dir_ = filename.split('.')[0]\n",
+    "    \n",
+    "    fig_dir = f\"{dir_}/figures\"\n",
+    "    \n",
+    "    if not os.path.isdir(fig_dir):\n",
+    "        os.makedirs(fig_dir)\n",
+    "    \n",
+    "    elements = partition_pdf(filename,\n",
+    "                chunking_strategy='by_title',\n",
+    "                combine_text_under_n_chars=500,\n",
+    "                max_characters=1000,\n",
+    "                new_after_n_chars=800,\n",
+    "                strategy='ocr_only')\n",
+    "    \n",
+    "    vectorstore = elements_2_vectorstore(elements, filename=filename, fig_dir=fig_dir)\n",
+    "    \n",
+    "    return vectorstore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vectorstore_BERT = create_trinity_vectorstore(\"bertv2.pdf\")"
    ]
   }
  ],
