--- a/tutorial/LLM+Langchain/Week-2/notebook.ipynb
+++ b/tutorial/LLM+Langchain/Week-2/notebook.ipynb
@@ -663,6 +663,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "16d74fce-c711-4dbb-8b81-0f6cae45ccdd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for recipe in recipe_train:\n",
+    "    document = Document(page_content=\", \".join(recipe['ingredients']),\n",
+    "                        metadata={\"cuisine\": recipe['cuisine'],\n",
+    "                                  \"id\": recipe['id']})\n",
+    "    documents.append(document)\n",
+    "\n",
+    "bm25_retriever = BM25Retriever.from_documents(documents, k=10, bm25_params={\"k1\":2.5})\n",
+    "\n",
+    "[\"text1\", \"text2\", \"text3\", '']\n",
+    "\n",
+    "documents = []\n",
+    "\n",
+    "for a in data:\n",
+    "    documents.append(Document(page_content=a,\n",
+    "                             metadata={'category': } ))\n",
+    "\n",
+    "embeddings = HuggingFaceEmbeddings(model_name=\"all-MiniLM-L6-v2\")\n",
+    "\n",
+    "vectorstore = FAISS.from_documents(documents, embedding=embeddings)\n",
+    "\n",
+    "vectorstore.save_local(\"faiss_index\")\n",
+    "\n",
+    "vectorstore_1 = FAISS.load_local(\n",
+    "    \"faiss_index\", embeddings, allow_dangerous_deserialization=True\n",
+    ")\n",
+    "\n",
+    "vectorstore_1.merge_from(vectorstore_2)\n",
+    "\n",
+    "retriever = vectorstore.as_retriever(search_kwargs={'k': 5})\n",
+    "\n",
+    "retriever.invoke(\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 29,
    "id": "5abc3ac4-4239-4453-a9ab-4ddfee7d5e9c",
    "metadata": {},
