update the content of the tutorial

--- a/tutorial/LLM+Langchain/Week-5/notebook_v2.ipynb
+++ b/tutorial/LLM+Langchain/Week-5/notebook_v2.ipynb
@@ -417,49 +417,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d9647575-2353-43aa-b473-6603874bc419",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 1. 從某個資料夾讀取檔案\n",
+    "import os\n",
     "\n",
-    "image_dir = os.path.join(\"tutorial\", \"LLM+Langchain\", \"Week-5\", \"image_source\")\n",
+    "os.chdir(\"../../../\")\n",
     "\n",
-    "image_files = os.listdir(image_dir)"
+    "\n",
+    "image_dir = os.path.join(\"tutorial\", \"LLM+Langchain\", \"Week-5\", \"image_source\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "aad5e465-cda6-4cba-b908-ab30b9d448a4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(image_files)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d57bb015-0142-4801-9f62-d0e0637857bc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Path(image_files[i + j]).resolve().as_uri()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1df103d9-68e2-429d-8eae-9c029bcfe7f3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style=\"display: flex; flex-direction: column;\"><div style=\"display: flex; justify-content: space-around; margin-bottom: 10px;\">\n",
+       "            <div>\n",
+       "                <img src=\"image_source/1girl,mast-208173699636910-22_08_55.png\" style=\"width: 300px; height: auto; border-radius: 8px; box-shadow: 2px 2px 6px rgba(0,0,0,0.2);\" />\n",
+       "            </div>\n",
+       "        \n",
+       "            <div>\n",
+       "                <img src=\"image_source/1girl,past-3819172030-21_52_15.png\" style=\"width: 300px; height: auto; border-radius: 8px; box-shadow: 2px 2px 6px rgba(0,0,0,0.2);\" />\n",
+       "            </div>\n",
+       "        \n",
+       "            <div>\n",
+       "                <img src=\"image_source/779946965812213661.png\" style=\"width: 300px; height: auto; border-radius: 8px; box-shadow: 2px 2px 6px rgba(0,0,0,0.2);\" />\n",
+       "            </div>\n",
+       "        \n",
+       "            <div>\n",
+       "                <img src=\"image_source/784048109824007850.png\" style=\"width: 300px; height: auto; border-radius: 8px; box-shadow: 2px 2px 6px rgba(0,0,0,0.2);\" />\n",
+       "            </div>\n",
+       "        </div><div style=\"display: flex; justify-content: space-around; margin-bottom: 10px;\">\n",
+       "            <div>\n",
+       "                <img src=\"image_source/852689680133523130.png\" style=\"width: 300px; height: auto; border-radius: 8px; box-shadow: 2px 2px 6px rgba(0,0,0,0.2);\" />\n",
+       "            </div>\n",
+       "        \n",
+       "            <div>\n",
+       "                <img src=\"image_source/858231870498817120.png\" style=\"width: 300px; height: auto; border-radius: 8px; box-shadow: 2px 2px 6px rgba(0,0,0,0.2);\" />\n",
+       "            </div>\n",
+       "        \n",
+       "            <div>\n",
+       "                <img src=\"image_source/860485010342337721.png\" style=\"width: 300px; height: auto; border-radius: 8px; box-shadow: 2px 2px 6px rgba(0,0,0,0.2);\" />\n",
+       "            </div>\n",
+       "        \n",
+       "            <div>\n",
+       "                <img src=\"image_source/862295879149704988.png\" style=\"width: 300px; height: auto; border-radius: 8px; box-shadow: 2px 2px 6px rgba(0,0,0,0.2);\" />\n",
+       "            </div>\n",
+       "        </div><div style=\"display: flex; justify-content: space-around; margin-bottom: 10px;\">\n",
+       "            <div>\n",
+       "                <img src=\"image_source/862839349278941305.png\" style=\"width: 300px; height: auto; border-radius: 8px; box-shadow: 2px 2px 6px rgba(0,0,0,0.2);\" />\n",
+       "            </div>\n",
+       "        \n",
+       "            <div>\n",
+       "                <img src=\"image_source/869177760008927387.png\" style=\"width: 300px; height: auto; border-radius: 8px; box-shadow: 2px 2px 6px rgba(0,0,0,0.2);\" />\n",
+       "            </div>\n",
+       "        \n",
+       "            <div>\n",
+       "                <img src=\"image_source/893609253049256269.png\" style=\"width: 300px; height: auto; border-radius: 8px; box-shadow: 2px 2px 6px rgba(0,0,0,0.2);\" />\n",
+       "            </div>\n",
+       "        \n",
+       "            <div>\n",
+       "                <img src=\"image_source/893834211625062992.png\" style=\"width: 300px; height: auto; border-radius: 8px; box-shadow: 2px 2px 6px rgba(0,0,0,0.2);\" />\n",
+       "            </div>\n",
+       "        </div></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import os\n",
     "from pathlib import Path\n",
     "from IPython.display import display, HTML\n",
-    "\n",
     "\n",
     "image_files = [os.path.join(\"image_source\", f) for f in os.listdir(image_dir)]\n",
     "\n",
